fix css dark mode

--- a/themes/minimal/css/blog.css
+++ b/themes/minimal/css/blog.css
@@ -37,6 +37,10 @@ header {
   border-bottom: 1px solid #0000000a;
 }
 
+.dark-mode header {
+    border-bottom: 1px solid #ffffff0a;
+}
+
 header .container {
     display: flex;
     justify-content: space-between;
